<resources>
    <string name="app_name">QuranApps</string>
    <string name="quran_app">Quran App</string>
    <string name="sample_name">Kyan Al\'Khadavie</string>
    <string name="tanggal">Tanggal,</string>
    <string name="sampe_ayat">Ayat : 1</string>
    <string name="terakhir_dibaca">Terakhir dibaca</string>
    <string name="todo">TODO</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="enable_gps">Aktifkan GPS</string>
    <string name="required_for_this_app">Aplikasi membutuhkan izin mengaktifkan lokasi</string>
    <string name="enable_now">Aktifkan</string>
    <string name="location_permission_not_granted">Lokasi belum diaktifkan, silahkan aktifkan untuk menggunakan fitur aplikasi secara penuh!</string>
</resources>