<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_8sdp"
    app:layoutDescription="@xml/activity_home_scene">

    <RelativeLayout
        android:id="@+id/rlBanner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnsalam">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/viewBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_6sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient">

                <ImageView
                    android:id="@+id/imgBanner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_80ssp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_gravity="end"
                    app:srcCompat="@drawable/ic_quran" />

                <TextView
                    android:id="@+id/txtLastRead2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:drawablePadding="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:text="@string/terakhir_dibaca"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_baseline_menu_book_24"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtLastRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:text="@string/sampe_ayat"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/txtLastRead"
                    app:layout_constraintStart_toStartOf="@+id/txtLastRead"
                    tools:text="Al Fatihah" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lnsalam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_toolbar">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assalamualaikum" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            tools:text="Kyan Al'Khadavie" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgSearch"
        android:layout_width="@dimen/_18sdp"
        android:layout_height="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/guideline_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:gravity="center_vertical"
        android:text="@string/quran_app"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="66dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scrollable_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="@dimen/_50sdp"
        android:fillViewport="true"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:requiresFadingEdge="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlBanner" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_6sdp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient"
            android:padding="@dimen/_4sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/shadowView2"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:padding="@dimen/_4sdp"
                app:backgroundColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_100sdp"
                app:cornerRadius="@dimen/_100sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgMasjid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/ic_masque" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/shadowView"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:padding="@dimen/_4sdp"
                app:backgroundColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_100sdp"
                app:cornerRadius="@dimen/_100sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgBookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:alpha="6"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_baseline_access_time_24" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_100sdp"
                app:cornerRadius="@dimen/_100sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shadowView2"
                app:layout_constraintStart_toEndOf="@+id/shadowView"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgQuran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="@dimen/_12sdp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgMasjid"
                    app:layout_constraintStart_toEndOf="@+id/imgBookmark"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>